# braid-group-rs

./: AGENT.md  Cargo.toml  README.md
src/: braid.rs  generator.rs  group.rs  lib.rs  reduction.rs  word.rs
